...
    <string name="uncompress_error">Error extracting files</string>
    <string name="uncompress_error_wrong_password">Wrong password</string>
    <string name="uncompress_error_malicious">Cannot extract malicious zip file</string>
    <string name="uncompress_error_too_large">Archive is too large to extract</string>
    <string name="uncompress_error_insufficient_storage">Not enough storage space</string>
    <string name="uncompress_error_invalid_archive">Not a valid archive file</string>
    <string name="uncompress_password_title">Password required</string>
    <string name="uncompress_password_hint">Password</string>
    <string name="open_file_error">Unable to open file</string>
    <string name="apk_install_error">Unable to install APK</string>
    <string name="share_files_error">Unable to share files</string>
    <string name="share_files_too_many">Too many files selected to share. Select fewer files and try again.</string>
    <string name="apk_permission_title">Permission required</string>
    <string name="apk_permission_message">To install APK files, you need to allow this app to install unknown apps in Settings.</string>
    <string name="apk_permission_settings">Open settings</string>
    <plurals name="uncompress_confirm">
        <item quantity="one">%d item will be extracted</item>
        <item quantity="other">%d items will be extracted</item>
    </plurals>
    <string name="uncompress_extract">Extract</string>
    <string name="error_name_exists">Name already exists</string>
    <string name="error_invalid_name">Name cannot contain / \\ * ? \" &lt; &gt; | :</string>
    <string name="error_reserved_name">Name cannot be \".\" or \"..\"</string>

    <string name="delete_deleting">Deleting…</string>
    <string name="delete_error">Error deleting</string>
...
    <string name="action_unselect_all">Unselect all</string>
    <string name="action_rename">Rename</string>
    <string name="action_share">Share</string>
    <string name="action_open">Open</string>
    <string name="action_open_with">Open with</string>
    <string name="action_compress">Compress</string>
    <string name="action_uncompress">Uncompress</string>
    <string name="action_move_to">Move to</string>
    <string name="action_copy_to">Copy to</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_open_folder">Open folder</string>
    <string name="action_remove_from_recents">Remove from recents</string>
...
